--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mongodb": "^2.1.11",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
